# simbpf

./: .gitignore  LICENSE  Makefile.in  README.md  configure  configure.ac  howto.txt
.github/workflows/: c-cpp.yml  codeql-analysis.yml
examples/: arp_or_udp.sb  complex.sb  dangling_else.sb  drop.sb  test_default_value.sb
include/: bpf.h  bpf_insn.h  config.h.in  graph.h  simbpf.h
include/simbpf/: ast.h  bpf.h  graph.h
src/: Makefile.am  Makefile.in  ast.c  bpf.c  grammar.y  graph.c  input.txt  lexicon.l  main.c  simbpf.c
test/: Makefile.am  Makefile.in  complex.sh  expected_arp_or_udp.sh  expected_dangling_else.sh  expected_default_test_value.sh  expected_drop.sh  simbpf_sample_input.sh  simbpf_valgrind.sh  test_simbpf.c
test/expected/: arp_or_udp.txt  dangling_else.txt  default_test_value.txt  drop.txt
tst/: Makefile.am  test_simbpf.c  test_simbpf.sh
