#AM_YFLAGS = -d
#check_PROGRAMS = test_simbpf
#test_simbpf_SOURCES = test_simbpf.c ../src/bpf.c ../src/graph.c ../src/ast.c ../src/simbpf.c ../src/grammar.y ../src/lexicon.l
#test_simbpf_LDADD = -lbpf

TESTS = simbpf_sample_input.sh simbpf_valgrind.sh expected_arp_or_udp.sh expected_drop.sh expected_default_test_value.sh expected_dangling_else.sh
